# versatile-data

./: .gitignore  Cargo.toml  README.md
src/: basic.rs  field.rs  lib.rs  operation.rs  option.rs  prelude.rs  priority.rs  row_fragment.rs  search.rs  serial.rs  sort.rs
src/field/: entity.rs
src/search/: enums.rs  result.rs
tests/: test.rs  test2.rs  test3.rs  test4.rs  test5.rs  test_100k.rs
