[package]
name = "versatile-data"
version = "0.66.0"
edition = "2021"

authors = ["Oden Shirataki <oden.srtk@gmail.com>"]

description = "A library for databases that has convenient datasets that group together commonly used fields and gives you the flexibility to create your own fields."

repository = "https://github.com/OdenShirataki/versatile-data"

keywords = ["avltree","database","Index","library"]
categories = ["database-implementations"]
license = "MIT/Apache-2.0"

[dependencies]
natord = "1.0"
serde = { version = "1.0", features = ["derive"] }

file_mmap= { version = "0.15" , path = "../file_mmap" }
various_data_file = { version = "0.10" , path = "../various_data_file" }
idx_sized = { version = "0.23" , path = "../idx_sized" }

[dependencies.uuid]
version = "1"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]