[package]
name = "versatile-data"
version = "0.83.2"
edition = "2021"

authors = ["Oden Shirataki <oden.srtk@gmail.com>"]

description = "A library for databases that has convenient datasets that group together commonly used fields and gives you the flexibility to create your own fields."

repository = "https://github.com/OdenShirataki/versatile-data"

keywords = ["avltree","database","Index","library"]
categories = ["database-implementations"]
license = "MIT/Apache-2.0"

[dependencies]
futures = "0.3.28"
serde = { version = "1.0", features = ["derive"] }
idx_binary = { version = "0.18" , path = "../idx_binary" }

[dependencies.uuid]
version = "1"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]