[package]
name = "versatile-data"
version = "0.102.2"
edition = "2021"

authors = ["Oden Shirataki <oden.srtk@gmail.com>"]

description = "A library for databases that has convenient datasets that group together commonly used fields and gives you the flexibility to create your own fields."

repository = "https://github.com/OdenShirataki/versatile-data"

keywords = ["avltree", "database", "Index", "library"]
categories = ["database-implementations"]
license = "MIT/Apache-2.0"

[dependencies]
hashbrown = "0.14.3"
futures = "0.3.29"
serde = { version = "1.0.193", features = ["derive"] }
async-recursion = "1.0.5"
async-trait = "0.1.74"
idx_binary = "0.27"

[dependencies.uuid]
version = "1.6.1"
features = ["v4", "fast-rng", "macro-diagnostics"]
